force-app/main/default/objects/CLQ_Inspection__c/CLQ_Inspection__c.object-meta.xml
<CustomObject>
    <label>Inspection</label>
    <nameField>
        <displayFormat>Inspection# {000000}</displayFormat>
        <label>Inspection No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>