force-app/main/default/objects/CLQ_Inspection__c/fields/Approved_Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Approved_Total_Capacity__c</fullName>
    <description>Approved Total Capacity for TFS 11180</description>
    <label>Recommended Total Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>