force-app/main/default/objects/CLQ_Inspection__c/fields/Approved_Total_Capacity_Under_2_1_2__c.field-meta.xml
<CustomField>
    <fullName>Approved_Total_Capacity_Under_2_1_2__c</fullName>
    <description>Field getting updated from Max. Number of Children Under 2 1/2 from Room Space Inspection</description>
    <label>Recommended Total Capacity Under 2 1/2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>