force-app/main/default/objects/CLQ_Inspection__c/fields/Calculated_Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Max_Capacity__c</fullName>
    <description>Field created for Bug 11180</description>
    <label>Calculated Max Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>