force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_All_Child_Files_In_Compliance__c.field-meta.xml
<CustomField>
    <fullName>CLQ_All_Child_Files_In_Compliance__c</fullName>
    <description>Check if All the Child record Files are In Compliance</description>
    <label>All Child Files In Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>