force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_All_Rules_In_Compliance__c.field-meta.xml
<CustomField>
    <fullName>CLQ_All_Rules_In_Compliance__c</fullName>
    <formula>IF( CLQ_Total_Risk_Points__c &gt;0, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Rules In Compliance</label>
    <type>Checkbox</type>
</CustomField>