force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections1</relationshipName>
    <type>Lookup</type>
</CustomField>