force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approved_Date__c</fullName>
    <description>This Field will be used to populate the &quot;Approved Date&quot; once the inspection is Approved. It is used only for Reporting Purpose for Inspection records created from September 8, 2017</description>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>