force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Assign_Task_Ownership__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Assign_Task_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field to trigger Process flow to create a task action with Inspection Owner, manger as the assigned to owner of the task, as part of approval process .</description>
    <label>Assign Task Ownership</label>
    <type>Checkbox</type>
</CustomField>