force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Cancel_Day_Camp__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Cancel_Day_Camp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to check if day camp is cancelled</description>
    <label>Cancel Day Camp</label>
    <type>Checkbox</type>
</CustomField>