force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_CAP_Generated__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CAP_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAP Generated?</label>
    <type>Checkbox</type>
</CustomField>