force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_City_at_Site__c.field-meta.xml
<CustomField>
    <fullName>CLQ_City_at_Site__c</fullName>
    <label>CLQ City at Site</label>
    <length>15</length>
    <type>Text</type>
</CustomField>