force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_City_Formula__c.field-meta.xml
<CustomField>
    <fullName>CLQ_City_Formula__c</fullName>
    <formula>CLQ_City_at_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>