force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Close_Task_on_Approve_Reject__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Close_Task_on_Approve_Reject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field to trigger field update on related task on inspection ,after Approver Approver or Rejects a record.</description>
    <label>Close Task on Approve/Reject</label>
    <type>Checkbox</type>
</CustomField>