force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_County__c.field-meta.xml
<CustomField>
    <fullName>CLQ_County__c</fullName>
    <formula>CLQ_County_at_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>