force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_County_at_Site__c.field-meta.xml
<CustomField>
    <fullName>CLQ_County_at_Site__c</fullName>
    <label>CLQ County at Site</label>
    <length>50</length>
    <type>Text</type>
</CustomField>