force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Create_Day_Camp_Audit__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Create_Day_Camp_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Day Camp Audit</label>
    <type>Checkbox</type>
</CustomField>