force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Date_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Date_Notification_Sent__c</fullName>
    <label>Date Notification Sent</label>
    <type>Date</type>
</CustomField>