force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Date_of_Audit__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Date_of_Audit__c</fullName>
    <label>Date of Audit</label>
    <type>Date</type>
</CustomField>