force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_DeferralDuration__c.field-meta.xml
<CustomField>
    <fullName>CLQ_DeferralDuration__c</fullName>
    <description>It&apos;s dependent picklist and it is based on the deferral value from the inspection status.</description>
    <label>Deferral Duration</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CLQ_Inspection_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>