force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Denial_Reason__c</fullName>
    <label>Deletion Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>