force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Email_Full_Inspection_Report__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Email_Full_Inspection_Report__c</fullName>
    <description>Check if the full inspection report has been emailed to the provider</description>
    <label>Email Full-Inspection Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>