force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Event_Information__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Event_Information__c</fullName>
    <description>Field to hold all the event information on Inspection object for report purpose</description>
    <label>Event Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>