force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Event_Information_Count__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Event_Information_Count__c</fullName>
    <label>Event Information Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>