force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_File_Note__c.field-meta.xml
<CustomField>
    <fullName>CLQ_File_Note__c</fullName>
    <label>File Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>