force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Follow_Up_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Follow_Up_Inspection_Date__c</fullName>
    <label>Follow Up Inspection Date</label>
    <type>Date</type>
</CustomField>