force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Insp_DeferralDueDate__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Insp_DeferralDueDate__c</fullName>
    <description>This field automatically gets calculated based on the deferral duration pick list value.</description>
    <label>Deferral Due Date</label>
    <type>Date</type>
</CustomField>