force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Inspection_age__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_age__c</fullName>
    <description>Label renamed as per OJLS-854 By Santosh.</description>
    <formula>today() -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Inspection Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>