force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Inspection_Begin_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Begin_Date_Time__c</fullName>
    <label>Inspection Begin Date/Time</label>
    <type>DateTime</type>
</CustomField>