force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Inspection_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Due_Date__c</fullName>
    <label>Inspection Due Date</label>
    <type>Date</type>
</CustomField>