force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Inspection_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_End_Date__c</fullName>
    <label>Inspection End Date</label>
    <type>Date</type>
</CustomField>