force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Inspection_Notice__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Notice__c</fullName>
    <label>Inspection Notice</label>
    <length>50</length>
    <type>Text</type>
</CustomField>