force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Inspection_Owner__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InspectionOwner</relationshipName>
    <type>Lookup</type>
</CustomField>