force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Inspection_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Record_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Record Id</label>
    <type>Text</type>
</CustomField>