force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Inspection_Requirements__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Requirements__c</fullName>
    <inlineHelpText>Enter specific information regarding accessibility or availability of inspection visit related items or people</inlineHelpText>
    <label>Inspection Requirements</label>
    <type>TextArea</type>
</CustomField>