force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Inspection_Revision_Complete__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Revision_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection Revision Complete</label>
    <type>Checkbox</type>
</CustomField>