force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Inspection_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Inspection Start Date</label>
    <type>Date</type>
</CustomField>