force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Status__c</fullName>
    <label>Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Processing</fullName>
                <default>true</default>
                <label>Pending Processing</label>
            </value>
            <value>
                <fullName>Under Approver Review</fullName>
            </value>
            <value>
                <fullName>Returned to Reviewer</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Revised</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Deferral</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Revision In Progress</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Rating Assessment Complete</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>