force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Inspection_Tool__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_Tool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Tool</label>
    <referenceTo>CLQ_Inspection_Tools__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>