force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Is_All_CAP_Approved__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Is_All_CAP_Approved__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is All CAP Approved?</label>
    <type>Checkbox</type>
</CustomField>