force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Is_Follow_Up_Inspection_Required__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Is_Follow_Up_Inspection_Required__c</fullName>
    <label>Is Follow Up Inspection Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>