force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Is_Locked_by_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Is_Locked_by_Status__c</fullName>
    <description>Determines if the current Inspection record should be locked for a specific status.</description>
    <formula>AND((RecordType.Name == &quot;Inspection&quot;),
OR( 
ISPICKVAL(CLQ_Inspection_Status__c , &quot;Revised&quot;), 
ISPICKVAL(CLQ_Inspection_Status__c , &quot;Closed&quot;), 
ISPICKVAL(CLQ_Inspection_Status__c , &quot;Deleted&quot;), 
ISPICKVAL(CLQ_Inspection_Status__c , &quot;Approved&quot;) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Locked by Status</label>
    <type>Checkbox</type>
</CustomField>