force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Last_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Last_Visit_Date__c</fullName>
    <description>The date stamp when we complete the visit. Initially it is being used in CAP</description>
    <label>Last Visit Date</label>
    <type>Date</type>
</CustomField>