force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_License_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_License_Type__c</fullName>
    <formula>TEXT(CLQ_Program__r.CLQ_License_Type__c)</formula>
    <label>License Type</label>
    <type>Text</type>
</CustomField>