force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Location_Id__c</fullName>
    <label>Location Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>