force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Location_Type__c</fullName>
    <label>Location Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>