force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Method__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CLQ_Inspection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>On-site Inspection</fullName>
            </value>
            <value>
                <fullName>Telephone Contact</fullName>
            </value>
            <value>
                <fullName>In-Office Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>