force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Notes__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>