force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Notice__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Notice__c</fullName>
    <label>Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unannounced</fullName>
                <default>true</default>
                <label>Unannounced</label>
            </value>
            <value>
                <fullName>Announced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>