force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Notification_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Notification_Due_Date__c</fullName>
    <formula>CLQ_Date_Notification_Sent__c +30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification Due Date</label>
    <type>Date</type>
</CustomField>