force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Number_of_Child_Files_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Number_of_Child_Files_Reviewed__c</fullName>
    <label>Number of Child Files Reviewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>