force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Offline_Lock__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Offline_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This flag checked when the inspection has been downloaded to be used on the offline app. Edits to such inspection are not authorized.</inlineHelpText>
    <label>Offline Lock</label>
    <type>Checkbox</type>
</CustomField>