force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_On_Site_Representative__c.field-meta.xml
<CustomField>
    <fullName>CLQ_On_Site_Representative__c</fullName>
    <label>On- Site Representative</label>
    <length>250</length>
    <type>Text</type>
</CustomField>