force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_On_Site_Representative_Present__c.field-meta.xml
<CustomField>
    <fullName>CLQ_On_Site_Representative_Present__c</fullName>
    <label>On-Site Representative Present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>