force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Onsite_Rating_Reasons__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Onsite_Rating_Reasons__c</fullName>
    <label>Rating Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change of Location</fullName>
            </value>
            <value>
                <fullName>Change of Owner</fullName>
            </value>
            <value>
                <fullName>Does not meet requirements of the Administrative Practices</fullName>
            </value>
            <value>
                <fullName>Does not meet requirements of the Family and Community Partnership domain</fullName>
            </value>
            <value>
                <fullName>Does not meet requirements of the Learning and Development domain</fullName>
            </value>
            <value>
                <fullName>Does not meet requirements of the Staff Qualifications and Professional Development domain</fullName>
            </value>
            <value>
                <fullName>FCC change of provider type</fullName>
            </value>
            <value>
                <fullName>Intent to Revoke</fullName>
            </value>
            <value>
                <fullName>Rating Reduced</fullName>
            </value>
            <value>
                <fullName>Rating Removed</fullName>
            </value>
            <value>
                <fullName>Required Compliance</fullName>
            </value>
            <value>
                <fullName>Voluntarily Discontinue Participation in SUTQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>