force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Original_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Original_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Inspection</label>
    <referenceTo>CLQ_Inspection__c</referenceTo>
    <relationshipLabel>Associated Inspections (Follow-Ups)</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>