force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Owner_Manager__c</fullName>
    <formula>CLQ_Inspection_Owner__r.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager</label>
    <type>Text</type>
</CustomField>