force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Phone__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>