force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Program_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_s_Email_Address__c</fullName>
    <label>Program&apos;s Email Address</label>
    <type>Email</type>
</CustomField>