force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Program_s_Licensing_Specialist__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_s_Licensing_Specialist__c</fullName>
    <label>Program&apos;s Licensing Specialist</label>
    <type>Email</type>
</CustomField>