force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Program_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Status__c</fullName>
    <formula>TEXT(CLQ_Program__r.CLQ_Program_Status__c)</formula>
    <label>Program Status</label>
    <type>Text</type>
</CustomField>