force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_ProgramId__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ProgramId__c</fullName>
    <formula>CLQ_Program__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProgramId</label>
    <type>Text</type>
</CustomField>