force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Published_to_Portal__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Published_to_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Published to Portal</label>
    <type>Checkbox</type>
</CustomField>