force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Quality_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Quality_Monitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CR 13879 - new inspection type, &apos;Quality Monitoring&apos; in inspections to work exactly the same as other monitoring inspections except the points will count.  Staff will need the ability to select this new inspection type from the current checkbox.</description>
    <label>Quality Monitoring</label>
    <type>Checkbox</type>
</CustomField>