force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Reason_for_Inspection_Tool_Selection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reason_for_Inspection_Tool_Selection__c</fullName>
    <inlineHelpText>Provide reason if you are not selecting recommended tool</inlineHelpText>
    <label>Reason for Inspection Tool Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>